
## Note: the nobase_ prefix circumvents path stripping, i.e. sk/Combinator.h
## becomes $(includedir)/sk/Combinator.h, not $(phase2dir)/Combinator.h
nobase_include_HEADERS = \
	phase2/Ast.h			\
	phase2/Closure.h		\
	phase2/Collection.h		\
	phase2/Compiler.h		\
	phase2/defs.h			\
	phase2/Environment.h		\
	phase2/Memory_Manager.h		\
	phase2/Namespace.h		\
	phase2/Object.h			\
	phase2/Primitive.h		\
	phase2/Primitive-import.h	\
	phase2/Type.h			\
	phase2/Void.h			\
	phase2/sk/Combinator.h		\
	phase2/sk/sk.h			\
	phase2/util/Array.h		\
	phase2/util/Bunch.h		\
	phase2/util/Dictionary.h	\
	phase2/util/Graph.h		\
	phase2/util/Hash_Map.h		\
	phase2/util/Hash_Table.h	\
	phase2/util/Name.h		\
	phase2/util/Set.h		\
	phase2/util/String.h		\
	phase2/util/Term.h		\
	phase2/xml/xmldom.h
