
## Note: the nobase_ prefix circumvents path stripping, i.e. sk/Combinator.h
## becomes $(includedir)/sk/Combinator.h, not $(phase2dir)/Combinator.h
nobase_include_HEADERS = \
	phase2/Ast.h			\
	phase2/common.h			\
	phase2/compiler.h		\
	phase2/Environment.h		\
	phase2/Interpreter.h		\
	phase2/Memory_Manager.h		\
	phase2/Namespace.h		\
	phase2/Object.h			\
	phase2/Primitive.h		\
	phase2/Primitive-import.h	\
	phase2/Type.h			\
	phase2/Void.h			\
	phase2/Combinator.h		\
	phase2/collection/Array.h	\
	phase2/collection/Bunch.h	\
	phase2/collection/Collection.h	\
	phase2/collection/Dictionary.h	\
	phase2/collection/Graph.h	\
	phase2/collection/Hash_Map.h	\
	phase2/collection/Hash_Table.h	\
	phase2/collection/Name.h	\
	phase2/collection/Set.h		\
	phase2/collection/String.h	\
	phase2/collection/Term.h	\
	phase2/xml/xmldom.h
