
## Note: the nobase_ prefix circumvents path stripping, i.e. sk/Combinator.h
## becomes $(includedir)/sk/Combinator.h, not $(phase2dir)/Combinator.h
nobase_include_HEADERS = \
	phase2/common.h			\
	phase2/compiler.h		\
	phase2/Environment.h		\
	phase2/Interpreter.h		\
	phase2/Manager.h		\
	phase2/Namespace.h		\
	phase2/Object.h			\
	phase2/Parser.h			\
	phase2/Primitive.h		\
	phase2/Primitive-import.h	\
	phase2/Type.h			\
	phase2/Void.h			\
	phase2/Combinator.h		\
	phase2/Array.h	\
	phase2/Bunch.h	\
	phase2/Collection.h	\
	phase2/Dictionary.h	\
	phase2/Graph.h	\
	phase2/Hash_Map.h	\
	phase2/Hash_Table.h	\
	phase2/Name.h	\
	phase2/Set.h		\
	phase2/String.h	\
	phase2/Term.h	\
	phase2/xml.h
