EXTRA_DIST = libxml/COPYING

## Note: the nobase_ prefix circumvents path stripping, (e.g. phase2/foo.h
##       installed as [install dir]/foo.h, without the phase2 subdirectory).
nobase_include_HEADERS = \
	phase2/common.h			\
	phase2/compiler.h		\
	phase2/Environment.h		\
	phase2/Interpreter.h		\
	phase2/Manager.h		\
	phase2/Namespace.h		\
	phase2/Object.h			\
	phase2/Parser.h			\
	phase2/Primitive.h		\
	phase2/Primitive-import.h	\
	phase2/Type.h			\
	phase2/Void.h			\
	phase2/Combinator.h		\
	phase2/Array.h			\
	phase2/Bunch.h			\
	phase2/Collection.h		\
	phase2/Dictionary.h		\
	phase2/Graph.h			\
	phase2/Hash_Map.h		\
	phase2/Hash_Table.h		\
	phase2/Name.h			\
	phase2/Set.h			\
	phase2/String.h			\
	phase2/Term.h			\
	phase2/xml.h

noinst_HEADERS = \
	libxml/c14n.h			\
	libxml/catalog.h		\
	libxml/chvalid.h		\
	libxml/debugXML.h		\
	libxml/dict.h			\
	libxml/DOCBparser.h		\
	libxml/encoding.h		\
	libxml/entities.h		\
	libxml/globals.h		\
	libxml/hash.h			\
	libxml/HTMLparser.h		\
	libxml/HTMLtree.h		\
	libxml/list.h			\
	libxml/nanoftp.h		\
	libxml/nanohttp.h		\
	libxml/parser.h			\
	libxml/parserInternals.h	\
	libxml/pattern.h		\
	libxml/relaxng.h		\
	libxml/SAX2.h			\
	libxml/SAX.h			\
	libxml/schemasInternals.h	\
	libxml/schematron.h		\
	libxml/threads.h		\
	libxml/tree.h			\
	libxml/uri.h			\
	libxml/valid.h			\
	libxml/xinclude.h		\
	libxml/xlink.h			\
	libxml/xmlautomata.h		\
	libxml/xmlerror.h		\
	libxml/xmlexports.h		\
	libxml/xmlIO.h			\
	libxml/xmlmemory.h		\
	libxml/xmlmodule.h		\
	libxml/xmlreader.h		\
	libxml/xmlregexp.h		\
	libxml/xmlsave.h		\
	libxml/xmlschemas.h		\
	libxml/xmlschemastypes.h	\
	libxml/xmlstring.h		\
	libxml/xmlunicode.h		\
	libxml/xmlversion.h		\
	libxml/xmlwriter.h		\
	libxml/xpath.h			\
	libxml/xpathInternals.h		\
	libxml/xpointer.h
