## Process this file with automake to produce Makefile.in

##SUBDIRS = util
SUBDIRS = parser

bin_PROGRAMS = phase2

phase2_SOURCES = phase2.c \
	Type.c \
	Object.c \
	util/Array.c		\
	util/Bunch.c		\
	util/Dictionary.c	\
	util/Hash_Map.c		\
	util/Hash_Table.c	\
	util/Name.c		\
	util/Set.c		\
	util/Term.c

INCLUDES = -I../include
